--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <link rel="stylesheet" href="./style.css"> 
-    <title>Document</title>
+    <title>Paper Prototyping</title>
 </head>
 <body>
-    <h1 id= "fire">Brooklyn Technical High School</h1> 
+    <h1 id= "fire">Paper Prototyping</h1>  
+    <p id= "names">Group Members: Aika, Tracy and Kevin</p>
     <p>Put recycling bins around the school </p>
 </body>
 </html>
