--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1 id= "fire">Paper Prototyping</h1>  
-    <p id= "names">Group Members: Aika, Tracy and Kevin</p>
-    <p>Put recycling bins around the school </p>
+    <h3 id= "names">Group Members: Aika, Tracy and Kevin</h3> 
+    <p>We begin by </p>
+    
 </body>
 </html>
