added first img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id= "fire">Paper Prototyping</h1>  
     <h3 id= "names">Group Members: Aika, Tracy and Kevin</h3> 
-    <p>We begin by </p>
-    
+    <p>The sustainability issue that we decided to tackle is behaviorial, since the solutions we came up with were the most realistic for tackling it.</p>
+    <img id="teach" src="classroom.jpg" alt="teach"> 
 </body>
 </html>
