--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1 id= "fire">Paper Prototyping</h1>  
     <h3 id= "names">Group Members: Aika, Tracy and Kevin</h3> 
-    <p>The sustainability issue that we decided to tackle is behaviorial, since the solutions we came up with were the most realistic for tackling it.</p>
-    <img id="teach" src="classroom.jpg" alt="teach"> 
+    <p id="paragraph0">The sustainability issue that we decided to tackle is behaviorial, since out of all the solutions we came up with, it is the most realistic for tackling it.</p>
+    <img id="teach" src="classroom.jpg" alt="teach">  
+    <p id= "paragraph1">First, we would begin by teaching everyone how to recycle and why it is important. Then we will let everyone know where recycling bins and other bins are located throughout the building.</p>
 </body>
 </html>
