--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="./style.css">  
     <title>Paper Prototyping</title>
 </head>
 <body>
     <h1 id= "fire">Paper Prototyping</h1>  
     <h3 id= "names">Group Members: Aika, Tracy and Kevin</h3> 
-    <p id="paragraph0">The sustainability issue that we decided to tackle is behaviorial, since out of all the solutions we came up with, it is the most realistic for tackling it.</p>
+    <p id="paragraph0">The sustainability issue that we decided to tackle is behaviorial, since out of all the solutions we came up with, it is the most realistic.</p>
     <img id="teach" src="classroom.jpg" alt="teach">  
-    <p id= "paragraph1">First, we would begin by teaching everyone how to recycle and why it is important. Then we will let everyone know where recycling bins and other bins are located throughout the building.</p>
+    <p id= "paragraph1">First, we would begin by teaching everyone how to recycle and why it is important. Then we will let everyone know where recycling bins and other bins are located throughout the building.</p> 
+    <div class="locations">
+        <div class="column">
+            <img id="cafeteria" src="Cafeteria.jpg" style="width:100%">  
+                </div> 
+        <div class="column">
+            <img id="waterFountain" src="waterFountain.jpg" style="width:100%"> 
+                </div>
+    </div>
 </body>
 </html>
