--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="column">
             <img id="waterFountain" src="waterFountain.jpg" style="width:100%"> 
                 </div>
-    </div>
+    </div> 
+    <p id="paragraph2">Next, we will begin adding recycling bins in both the cafteria and locations where people hang out around in school.</p>
 </body>
 </html>
