--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <body>
     <h1 id= "fire">Paper Prototyping</h1>  
     <h3 id= "names">Group Members: Aika, Tracy and Kevin</h3> 
-    <p id="paragraph0">The sustainability issue that we decided to tackle is behaviorial, since out of all the solutions we came up with, it is the most realistic.</p>
-    <img id="teach" src="classroom.jpg" alt="teach">  
-    <p id= "paragraph1">First, we would begin by teaching everyone how to recycle and why it is important. Then we will let everyone know where recycling bins and other bins are located throughout the building.</p> 
+    <p id="paragraph0">The sustainability issue that we decided to tackle is behaviorial, since it is the most realistic solution we have.</p>
+    <img id="teach" src="classroom.jpg" alt="teach">   
+    <p id= "paragraph1">First, we would start by teaching everyone how to recycle and why it is important. Then we will let everyone know where recycling bins and other bins are throughout the building.</p> 
+    <img id="principal" src="principal.jpg">  
+    <p id="paragraph2">After teaching students about the importance of recycling, we would go talk with administrators and people in charge about buying more bins and placing them throughout locations in the school. </p> 
+    <img id="funding" src= "brooklynTechAlum.jpg">   
+    <p id="paragraph3">After getting the approval of administrators and others in charge, we would begin funding for the bins, through donations and possible funds from the alumni foundation.</p>
+    <img id="timeChange" src="time.jpg"> 
+    <p id="paragraph6">We would also propose increasing passing time by 30 seconds or a minute to give more time for students to throw out their trash properly.</p>
     <div class="locations">
         <div class="column">
             <img id="cafeteria" src="Cafeteria.jpg" style="width:100%">  
@@ -21,6 +27,8 @@
             <img id="waterFountain" src="waterFountain.jpg" style="width:100%"> 
                 </div>
     </div> 
-    <p id="paragraph2">Next, we will begin adding recycling bins in both the cafteria and locations where people hang out around in school.</p>
+    <p id="paragraph4">Next, we will begin adding recycling bins in both the cafeteria and locations where people hang out around in school.</p> 
+    <img id="signs" src="signs.png">  
+    <p id="paragraph5">After getting the bins, we will begin making signs to put around with the bins. </p> 
 </body>
 </html>
