--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
     </div> 
     <p id="paragraph4">Next, we will begin adding recycling bins in both the cafeteria and locations where people hang out around in school.</p> 
-    <img id="signs" src="signs.png">  
+    <img id="signs" src="signs.jpg">  
     <p id="paragraph5">After getting the bins, we will begin making signs to put around with the bins. </p> 
 </body>
 </html>
