--- a/index.html
+++ b/index.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase.js"></script>  
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#config-web-app -->
     
-      <!-- The core Firebase JS SDK is always required and must be listed first -->
-
-
-  
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#config-web-app -->
-
-
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyCW3b_8OjwI0q84MXv1tQct2bX8Xs3t47g",
-    authDomain: "apes1-d67ca.firebaseapp.com",
-    databaseURL: "https://apes1-d67ca.firebaseio.com",
-    projectId: "apes1-d67ca",
-    storageBucket: "",
-    messagingSenderId: "95819187683",
-    appId: "1:95819187683:web:8deea25ff11dac178f4cd6",
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script> 
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCIvklNcTmvrwx4kdjNNJXN-Suu9pJQMYg",
+        authDomain: "firemessage-55da7.firebaseapp.com",
+        databaseURL: "https://firemessage-55da7.firebaseio.com",
+        projectId: "firemessage-55da7",
+        storageBucket: "",
+        messagingSenderId: "711831237592",
+        appId: "1:711831237592:web:fcbcaf2a382e294b"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig); 
+    </script> 
     <link rel="stylesheet" href="./style.css">    
     <script src="apes.js" defer></script>
     <title>Paper Prototyping</title>
