10th commit and last hopefully

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     <h1 id= "fire">Paper Prototyping</h1>  
     <h3 id= "names">Group Members: Aika, Tracy and Kevin</h3> 
     <p id="paragraph0">The sustainability issue that we decided to tackle is behaviorial, since it is the most realistic solution we have.</p>
-    <img id="teach" src="classroom.jpg" alt="teach">   
+    <img id="teach" src="classroom.jpg" alt="teach">    
     <p id= "paragraph1">First, we would start by teaching everyone how to recycle and why it is important. Then we will let everyone know where recycling bins and other bins are throughout the building.</p> 
-    <img id="principal" src="principal.jpg">  
+   <img src="Gameprototype.png" id="game"> 
+   <p id="paragraph7">We will also make a recycling game for students.</p>
+    <img id="principal" src="principal.jpg">   
     <p id="paragraph2">After teaching students about the importance of recycling, we would go talk with administrators and people in charge about buying more bins and placing them throughout locations in the school. </p> 
     <img id="funding" src= "brooklynTechAlum.jpg">   
     <p id="paragraph3">After getting the approval of administrators and others in charge, we would begin funding for the bins, through donations and possible funds from the alumni foundation.</p>
@@ -50,7 +52,7 @@
     <p id="paragraph4">Next, we will begin adding recycling bins in both the cafeteria and locations where people hang out around in school.</p> 
     <img id="signs" src="signs.jpg">  
     <p id="paragraph5">After getting the bins, we will begin making signs to put around with the bins. </p>  
-    <h2>Comments Section:</h2>  
+    <h2 id="comments">Comments Section:</h2>  
       <!--This div will be populated with messages-->
       <div class="allMessages">
         
@@ -72,6 +74,8 @@
             <button id="submitButton">Submit</button>
         </form>
     </div>
-    
+    <div class="footer">
+        <p>Environmental Sustainability: Paper Prototyping</p>
+      </div>
 </body>
 </html>
